--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="education/edu.html">Education</a>></li>
+                        <li><a href="education/edu.html">Education</a></li>
                         <li><a href="experience/exp.html">Work Experiences</a></li>
                         <li><a href="certs/certs.html">Certifications</a></li>
                         <li><a href="ref/refs.html">References</a></li>
