Editing index.html to include name of img file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </ul>
                 </nav>
                 <main>
-                    <img src="src/...png" alt="Sofia Ford">
+                    <img src="src/headshot-sf.jpeg" alt="Sofia Ford">
                     <p>My name is Sofia Ford...Let's rock and roll.</p>
                     <label for="one">Introduce a number</label><input id="one">
                     <label for="two">Introduce a second number</label><input id="two">
