--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </main>
             </div>
             <footer>
-                <p>All rights reserved &#169;</p>
+                <p>All rights reserved <a href="">Credits</a>&#169;</p>
             </footer>
         </div>
         <script src="index.js"></script>
