Adding a leadership experience internal page and adding title and links to head of internal pages

--- a/ref/refs.html
+++ b/ref/refs.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sofia F's Resume | References</title>
+    <link rel="stylesheet" href="../index.css" type="text/css">
 </head>
 <body>
 
