--- a/club/leadership-exp.html
+++ b/club/leadership-exp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sofia F's Resume | Fun Facts</title>
+    <title>Sofia F's Resume | Leadership</title>
     <link rel="stylesheet" href="../index.css" type="text/css">
 </head>
 <body>
