--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
             <meta charset="UTF-8">
-            <title>Home | Sofia F's Resume</title>
+            <title>Sofia F's Resume | Home</title>
             <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
@@ -17,6 +17,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="education/edu.html">Education</a></li>
                         <li><a href="experience/exp.html">Work Experiences</a></li>
+                        <li><a href="club/leadership-exp.html">Leadership Experiences</a></li>
                         <li><a href="certs/certs.html">Certifications</a></li>
                         <li><a href="ref/refs.html">References</a></li>
                         <li><a href="fun/fun.html">Fun Facts</a></li>
