Adding id to intro paragraph

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </nav>
                 <main>
                     <img id="headshot" src="src/headshot-sf.jpeg" alt="Sofia Ford">
-                    <p>My name is Sofia Ford...Let's rock and roll.</p>
+                    <p id="intro">My name is Sofia Ford...Let's rock and roll.</p>
                     <label for="one">Introduce a number</label><input id="one">
                     <label for="two">Introduce a second number</label><input id="two">
                     <button onclick="doAdd()">Add</button>
