Adding skeleton of neccesary html elements to all my internal pages

--- a/experience/exp.html
+++ b/experience/exp.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sofia F's Resume | Experience</title>
-    <link rel="stylesheet" href="../index.css" type="text/css">
-</head>
-<body>
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Sofia F's Resume | Experience</title>
+        <link rel="stylesheet" href="../index.css" type="text/css">
+    </head>
+    <body>
+        <div id="page-wrapper">
+            <header>
+                <h1>Previous Work Experience</h1>
+                <p>A list of my previous work experiences and internships.</p>
+            </header>
+            <div id="container">
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../education/edu.html">Education</a></li>
+                        <li><a href="../experience/exp">Work Experience</a></li>
+                        <li><a href="../club/leadership-exp.html">Leadership Experience</a></li>
+                        <li><a href="../certs/certs.html">Certifications</a></li>
+                        <li><a href="../ref/refs.html">References</a></li>
+                        <li><a href="../fun/fun.html">Fun Facts</a></li>
+                        <li><a href="../proj/proj.html">Projects</a></li>
+                    </ul>
+                </nav>
+                <main>
+                    <!--Fill with info-->
+                </main>
+            </div>
+            <footer>
+                <p>All rights reserved <a href="">Credits</a> &#169;</p>
+            </footer>
+        </div>
+    </body>
 </html>
