--- a/fun/fun.html
+++ b/fun/fun.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../education/edu.html">Education</a></li>
-                        <li><a href="../experience/exp">Work Experience</a></li>
+                        <li><a href="../experience/exp.html">Work Experience</a></li>
                         <li><a href="../club/leadership-exp.html">Leadership Experience</a></li>
                         <li><a href="../certs/certs.html">Certifications</a></li>
                         <li><a href="../ref/refs.html">References</a></li>
