--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
                 </nav>
                 <main>
                     <img id="headshot" src="src/headshot-sf.jpeg" alt="Sofia Ford">
-                    <p id="intro">My name is Sofia Ford...Let's rock and roll.</p>
-                    <label for="one">Introduce a number</label><input id="one">
-                    <label for="two">Introduce a second number</label><input id="two">
-                    <button onclick="doAdd()">Add</button>
+                    <p id="intro">My name is Sofia Ford, and I'm an undergraduate student at Boston University. \
+                    I'm majoring in Computer Science with the expected graduation date of May 2026. I'm looking to \
+                    expand my knowledge in CS through an entry-level position or internship.
 
-                    <h2 id="output"></h2>
+                    My skills include: C#, Python, Java, Matplotlib, Numpy, ArcGIS online, SQL, Oracle, OCaml, Golang \
+                    Git, ArcGIS, Canva, Wix and Microsoft Office Suite. If you would like to learn more about me, feel \
+                    free to explore my website.
+
+                    </p>
+                    <h3>Contact Info</h3>
+                    <p>sofiac1903@gmail.com | scfordw@bu.edu<p>
                 </main>
             </div>
             <footer>
                 <p>All rights reserved <a href="">Credits</a>&#169;</p>
             </footer>
         </div>
-        <script src="index.js"></script>
     </body>
 </html>
