--- a/proj/proj.html
+++ b/proj/proj.html
@@ -26,11 +26,17 @@
                 </nav>
                 <main>
                     <!--Fill with info-->
+                    <label for="one">Introduce a number</label><input id="one">
+                    <label for="two">Introduce a second number</label><input id="two">
+                    <button onclick="doAdd()">Add</button>
+
+                    <h2 id="output"></h2>
                 </main>
             </div>
             <footer>
                 <p>All rights reserved <a href="">Credits</a> &#169;</p>
             </footer>
         </div>
+        <script src="../index.js"></script>
     </body>
 </html>
