--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
                 </nav>
                 <main>
                     <img id="headshot" src="src/headshot-sf.jpeg" alt="Sofia Ford">
-                    <p id="intro">My name is Sofia Ford, and I'm an undergraduate student at Boston University. \
-                    I'm majoring in Computer Science with the expected graduation date of May 2026. I'm looking to \
-                    expand my knowledge in CS through an entry-level position or internship.
-
-                    My skills include: C#, Python, Java, Matplotlib, Numpy, ArcGIS online, SQL, Oracle, OCaml, Golang \
-                    Git, ArcGIS, Canva, Wix and Microsoft Office Suite. If you would like to learn more about me, feel \
-                    free to explore my website.
-
+                    <p id="intro"><br>My name is Sofia Ford, and I'm an undergraduate student at Boston University. <br>
+                    I'm majoring in Computer Science with the expected graduation date of May 2026. I'm looking to <br>
+                    expand my knowledge in CS through an entry-level position or internship.<br>
+                    <br>
+                    My skills include: C#, Python, Java, Matplotlib, Numpy, ArcGIS online, SQL, Oracle, OCaml, Golang <br>
+                    Git, ArcGIS, Canva, Wix and Microsoft Office Suite. If you would like to learn more about me, feel <br>
+                    free to explore my website.<br>
+                    <br>
                     </p>
                     <h3>Contact Info</h3>
-                    <p>sofiac1903@gmail.com | scfordw@bu.edu<p>
+                    <p><br>sofiac1903@gmail.com | scfordw@bu.edu<p>
                 </main>
             </div>
             <footer>
