--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <br>
                     My skills include: C#, Python, Java, Matplotlib, Numpy, ArcGIS online, SQL, Oracle, OCaml, Golang <br>
                     Git, ArcGIS, Canva, Wix and Microsoft Office Suite. If you would like to learn more about me, feel <br>
-                    free to explore my website.<br>
-                    <br>
+                    free to explore my website.
                     </p>
+                    <br>
                     <h3>Contact Info</h3>
                     <p><br>sofiac1903@gmail.com | scfordw@bu.edu<p>
                 </main>
