Fixing spacing of contact info

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     free to explore my website.
                     </p>
                     <br>
-                    <h3>Contact Info</h3>
-                    <p><br>sofiac1903@gmail.com | scfordw@bu.edu<p>
+                    <h3 class="contact">Contact Info</h3>
+                    <p class="contact"><br>sofiac1903@gmail.com | scfordw@bu.edu<p>
                 </main>
             </div>
             <footer>
