--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </p>
                     <br>
                     <h3 class="contact">Contact Info</h3>
-                    <p class="contact"><br>sofiac1903@gmail.com | scfordw@bu.edu<p>
+                    <p class="contact">sofiac1903@gmail.com | scfordw@bu.edu<p>
                 </main>
             </div>
             <footer>
