Adding content to educational background page

--- a/education/edu.html
+++ b/education/edu.html
@@ -25,7 +25,18 @@
                     </ul>
                 </nav>
                 <main>
-                    <!--Fill with info-->
+                    <h4><em>Educational Background</em></h4>
+                    <br>
+                    <p class="Schools">
+                        Boston University - B.A. in Computer Science<br>
+                        Expected Graduation: May 2026<br>
+                        <em>Boston, MA<em><br>
+                        Relevant Coursework: Introduction to Computer Science 1 & 2 (Data Structures), Combinatorics Structures, <br>
+                            Linear Algebra, Computer Systems,Information Security, Software Engineering, <br>
+                            Database Systems, Design of Programming Languages <br>
+                        <br>
+                        Coursework In Progress: Web Development, Distributed Systems
+                    </p>
                 </main>
             </div>
             <footer>
