Adding information to edu.html file

--- a/education/edu.html
+++ b/education/edu.html
@@ -25,17 +25,25 @@
                     </ul>
                 </nav>
                 <main>
-                    <h4><em>Educational Background</em></h4>
+                    <h3>Educational Background</h3>
                     <br>
                     <p class="Schools">
                         Boston University - B.A. in Computer Science<br>
                         Expected Graduation: May 2026<br>
-                        <em>Boston, MA<em><br>
-                        Relevant Coursework: Introduction to Computer Science 1 & 2 (Data Structures), Combinatorics Structures, <br>
+                        <em>Boston, MA</em><br>
+                        <br>
+                        <strong>Honors:</strong>
+                        <ol>
+                            <li>Dean's List Spring 2025</li>
+                            <li>Dean's List Fall 2024</li>
+                            <li>Dean's List Fall 2023</li>
+                            <li>Dean's List Spring 2023</li>
+                        </ol>
+                        <strong>Relevant Coursework:</strong> Introduction to Computer Science 1 & 2 (Data Structures), Combinatorics Structures, <br>
                             Linear Algebra, Computer Systems,Information Security, Software Engineering, <br>
                             Database Systems, Design of Programming Languages <br>
                         <br>
-                        Coursework In Progress: Web Development, Distributed Systems
+                        <strong>Coursework In Progress:</strong> Web Development, Distributed Systems
                     </p>
                 </main>
             </div>
