Fixing bug in education/edu.html

--- a/education/edu.html
+++ b/education/edu.html
@@ -33,15 +33,16 @@
                         <em>Boston, MA</em><br>
                         <br>
                         <strong>Honors:</strong>
-                        <ol>
-                            <li>Dean's List Spring 2025</li>
-                            <li>Dean's List Fall 2024</li>
-                            <li>Dean's List Fall 2023</li>
-                            <li>Dean's List Spring 2023</li>
-                        </ol>
-                        <strong>Relevant Coursework:</strong> Introduction to Computer Science 1 & 2 (Data Structures), Combinatorics Structures, <br>
-                            Linear Algebra, Computer Systems,Information Security, Software Engineering, <br>
-                            Database Systems, Design of Programming Languages <br>
+                    </p>
+                    <ul class="Schools">
+                        <li>Dean's List Spring 2025</li>
+                        <li>Dean's List Fall 2024</li>
+                        <li>Dean's List Fall 2023</li>
+                        <li>Dean's List Spring 2023</li>
+                    </ul>
+                    <p class="Schools"><strong>Relevant Coursework:</strong> Introduction to Computer Science 1 & 2 (Data Structures), Combinatorics Structures, <br>
+                        Linear Algebra, Computer Systems,Information Security, Software Engineering, <br>
+                        Database Systems, Design of Programming Languages <br>
                         <br>
                         <strong>Coursework In Progress:</strong> Web Development, Distributed Systems
                     </p>
