Adjusting education content with css

--- a/education/edu.html
+++ b/education/edu.html
@@ -27,21 +27,22 @@
                 <main>
                     <h3>Educational Background</h3>
                     <br>
-                    <p class="Schools">
+                    <p class="schools">
                         Boston University - B.A. in Computer Science<br>
                         Expected Graduation: May 2026<br>
                         <em>Boston, MA</em><br>
                         <br>
                         <strong>Honors:</strong>
                     </p>
-                    <ul class="Schools">
+                    <ul class="schools">
                         <li>Dean's List Spring 2025</li>
                         <li>Dean's List Fall 2024</li>
                         <li>Dean's List Fall 2023</li>
                         <li>Dean's List Spring 2023</li>
                     </ul>
-                    <p class="Schools"><strong>Relevant Coursework:</strong> Introduction to Computer Science 1 & 2 (Data Structures), Combinatorics Structures, <br>
-                        Linear Algebra, Computer Systems,Information Security, Software Engineering, <br>
+                    <br>
+                    <p class="schools"><strong>Relevant Coursework:</strong> Introduction to Computer Science 1 & 2 (Data Structures), <br>
+                        Combinatorics Structures, Linear Algebra, Computer Systems,Information Security, Software Engineering, <br>
                         Database Systems, Design of Programming Languages <br>
                         <br>
                         <strong>Coursework In Progress:</strong> Web Development, Distributed Systems
