--- a/education/edu.html
+++ b/education/edu.html
@@ -25,7 +25,7 @@
                     </ul>
                 </nav>
                 <main>
-                    <h3>Educational Background</h3>
+                    <h3 class="schools">Educational Background</h3>
                     <br>
                     <p class="schools">
                         Boston University - B.A. in Computer Science<br>
@@ -35,10 +35,10 @@
                         <strong>Honors:</strong>
                     </p>
                     <ul class="schools">
-                        <li>Dean's List Spring 2025</li>
-                        <li>Dean's List Fall 2024</li>
-                        <li>Dean's List Fall 2023</li>
-                        <li>Dean's List Spring 2023</li>
+                        <li class="schools">Dean's List Spring 2025</li>
+                        <li class="schools">Dean's List Fall 2024</li>
+                        <li class="schools">Dean's List Fall 2023</li>
+                        <li class="schools">Dean's List Spring 2023</li>
                     </ul>
                     <br>
                     <p class="schools"><strong>Relevant Coursework:</strong> Introduction to Computer Science 1 & 2 (Data Structures),<br>
