Adjusting education content with css

--- a/education/edu.html
+++ b/education/edu.html
@@ -34,12 +34,14 @@
                         <br>
                         <strong>Honors:</strong>
                     </p>
-                    <ul class="schools">
-                        <li class="schools">Dean's List Spring 2025</li>
-                        <li class="schools">Dean's List Fall 2024</li>
-                        <li class="schools">Dean's List Fall 2023</li>
-                        <li class="schools">Dean's List Spring 2023</li>
-                    </ul>
+                    <a class="schools">
+                        <ul>
+                            <li>Dean's List Spring 2025</li>
+                            <li>Dean's List Fall 2024</li>
+                            <li>Dean's List Fall 2023</li>
+                            <li>Dean's List Spring 2023</li>
+                        </ul>
+                    </a>
                     <br>
                     <p class="schools"><strong>Relevant Coursework:</strong> Introduction to Computer Science 1 & 2 (Data Structures),<br>
                         Combinatorics Structures, Linear Algebra, Computer Systems,Information Security, Software Engineering, <br>
