Adding content to work experience page

--- a/experience/exp.html
+++ b/experience/exp.html
@@ -24,7 +24,30 @@
                     </ul>
                 </nav>
                 <main>
-                    <!--Fill with info-->
+                    <h2>Work Experience</h2>
+
+                    <div class="work">
+                        <ul>
+                            <li>
+                                <h3>Panama's Ministry of Economy and Finance</h3>
+                                <p><em>Intern in the Computation Department</em><br>
+                                May 2025-Aug 2025<br>
+                                Panama City, Panama</p>
+                            </li>
+                            <li>
+                                <h3>Boston University Questrom Starbucks</h3>
+                                <p><em>Student Front-Of-House Worker</em><br>
+                                Jun 2023-May 2025<br>
+                                Boston, MA</p>
+                            </li>
+                            <li>
+                                <h3>Panama Canal Authority</h3>
+                                <p><em>Intern-Student Assistant in GIS office</em><br>
+                                    Jun 2024-Aug 2024<br>
+                                    Panama City, Panama</p>
+                            </li>
+                        </ul>
+                    </div>
                 </main>
             </div>
             <footer>
