--- a/education/edu.html
+++ b/education/edu.html
@@ -27,20 +27,20 @@
                     <h3 class="schools">Educational Background</h3>
                     <br>
                     <p class="schools">
-                        Boston University - B.A. in Computer Science<br>
+                        <strong>Boston University - B.A. in Computer Science</strong><br>
                         Expected Graduation: May 2026<br>
                         <em>Boston, MA</em><br>
                         <br>
                         <strong>Honors:</strong>
                     </p>
-                    <a class="schools">
+                    <div class="schools">
                         <ul>
                             <li>Dean's List Spring 2025</li>
                             <li>Dean's List Fall 2024</li>
                             <li>Dean's List Fall 2023</li>
                             <li>Dean's List Spring 2023</li>
                         </ul>
-                    </a>
+                    </div>
                     <br>
                     <p class="schools"><strong>Relevant Coursework:</strong> Introduction to Computer Science 1 & 2 (Data Structures),<br>
                         Combinatorics Structures, Linear Algebra, Computer Systems,Information Security, Software Engineering, <br>
