--- a/experience/exp.html
+++ b/experience/exp.html
@@ -24,7 +24,7 @@
                     </ul>
                 </nav>
                 <main>
-                    <h2>Work Experience</h2>
+                    <h2 class="work">Work Experience</h2>
 
                     <div class="work">
                         <ul>
