Adding content to leadership experience page

--- a/club/leadership-exp.html
+++ b/club/leadership-exp.html
@@ -24,7 +24,45 @@
                     </ul>
                 </nav>
                 <main>
-                    <!--Fill with info-->
+                    <h2 class="leadership">Leadership Experience</h2>
+
+                    <div class="leadership">
+                        <ul>
+                            <li>
+                                <h3>The BU Buzz</h3>
+                                <p><em>Web Director</em><br>
+                                    Jan 2025-Present<br>
+                                    Boston, MA</p>
+                                <ul>
+                                    <li>Manage and publish daily articles on Buzz website using Wix, ensuring adherence to formatting guidelines.</li>
+                                    <li>Distribute weekly newsletters to Buzz staff using Mailchimp, providing key operational updates.</li>
+                                    <li>Assign tasks to web development team and relay inquiries from readers to directors.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h3>Alpha Sigma Kappa – Women in Technical Studies</h3>
+                                <p><em>Active Member - Social & Professional STEM Sorority </em><br>
+                                    <em>Public Relations Chair</em><br>
+                                    Feb 2023-Dec 2024<br>
+                                    Boston, MA</p>
+                                <ul>
+                                    <li>Designed digital media to promote sorority events and foster sorority’s identity.</li>
+                                    <li>Managed digital archives for chapter and documented events with information and photography.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h3>Hack4Impact</h3>
+                                <p><em>Junior Development Team</em><br>
+                                    Sep 2023-May 2024<br>
+                                    Boston, MA</p>
+                                <ul>
+                                    <li>Learned front-end development skills with a group of peers to address societal issues.</li>
+                                    <li>Advanced knowledge in languages like HTML, CSS and Javascript.</li>
+                                    <li>Created a web application through the application of an open source API.</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </main>
             </div>
             <footer>
