Updated content on work experience page

--- a/experience/exp.html
+++ b/experience/exp.html
@@ -33,18 +33,33 @@
                                 <p><em>Intern in the Computation Department</em><br>
                                 May 2025-Aug 2025<br>
                                 Panama City, Panama</p>
+                                <ul>
+                                    <li>Managed offices LAN network, servers and databases.</li>
+                                    <li>Updated website assets and financial reports in RDL.</li>
+                                    <li>Resolved IT problems throughout an office of 30, incluuding domain and software compatibility issues</li>
+                                </ul>
                             </li>
                             <li>
                                 <h3>Boston University Questrom Starbucks</h3>
                                 <p><em>Student Front-Of-House Worker</em><br>
                                 Jun 2023-May 2025<br>
                                 Boston, MA</p>
+                                <ul>
+                                    <li>Collaborate with other baristas to make drinks and resolve customer dissatisfaction.</li>
+                                    <li>Mastered working under pressure and multitasking in a fast-paced environment.</li>
+                                    <li>Led closing shifts, ensuring all appliances and surfaces are clean and stowed away in time.</li>
+                                </ul>
                             </li>
                             <li>
                                 <h3>Panama Canal Authority</h3>
                                 <p><em>Intern-Student Assistant in GIS office</em><br>
-                                    Jun 2024-Aug 2024<br>
-                                    Panama City, Panama</p>
+                                Jun 2024-Aug 2024<br>
+                                Panama City, Panama</p>
+                                <ul>
+                                    <li>Led and participated in meetings with stakeholders to discuss projects and refine software requirements.</li>
+                                    <li>Designed and built digital maintenance and repair forms for engineering team with ArcGIS Online tools.</li>
+                                    <li>Co-led workshops to train engineers on leveraging GIS software, to better adopt digital forms.</li>
+                                </ul>
                             </li>
                         </ul>
                     </div>
