--- a/experience/exp.html
+++ b/experience/exp.html
@@ -36,7 +36,7 @@
                                 <ul>
                                     <li>Managed offices LAN network, servers and databases.</li>
                                     <li>Updated website assets and financial reports in RDL.</li>
-                                    <li>Resolved IT problems throughout an office of 30, incluuding domain and software compatibility issues</li>
+                                    <li>Resolved IT problems including domain and software compatibility issues</li>
                                 </ul>
                             </li>
                             <li>
