Adding content to certifications internal page and adding some css to it

--- a/certs/certs.html
+++ b/certs/certs.html
@@ -24,7 +24,12 @@
                     </ul>
                 </nav>
                 <main>
-                    <!--Fill with info-->
+                    <h2 class="certifications">Certifications</h2>
+                    <ul class="certifications">
+                        <li><h4>"Understanding Sql Using Oracle DataBase" Certification</h4>
+                            <img id="sql-ocl-cert" src="../src/cert-sql-oracle.jpg" alt="Sql using Oracle Database Certification granted by the Panamanian Institue of Technology and Inovation to Sofia Ford">
+                        </li>
+                    </ul>
                 </main>
             </div>
             <footer>
