--- a/ref/refs.html
+++ b/ref/refs.html
@@ -24,7 +24,19 @@
                     </ul>
                 </nav>
                 <main>
-                    <!--Add info here-->
+                    <h3 class="references">References:</h3>
+                    <ul class="references">
+                        <li><h4>Patricia Norton | Boston University Dining Service</h4><br>
+                            <em>Food Service Manager, Questrom School of Business Retail</em><br>
+                            <strong>Office:</strong>595 Commonwealth Avenue Boston, MA 02215<br>
+                            <strong>Phone:</strong>+1(617)353-1524
+                        </li>
+                        <li><h4>Carlos Contreras | Panama Canal Authority</h4><br>
+                            <em>Senior GIS and IT Solutions Leader, Strategic Project Manager</em><br>
+                            <strong>Office:</strong>XC5V+QXP, Panama City, Panamá Province, Panama<br>
+                            <strong>Phone:</strong>+507-6672-2074
+                        </li>
+                    </ul>
                 </main>
             </div>
             <footer>
