Adding missing calculator buttons

--- a/proj/proj.html
+++ b/proj/proj.html
@@ -25,9 +25,17 @@
                 </nav>
                 <main>
                     <!--Fill with info-->
+                    <h3>Projects:</h3>
+
+
                     <label for="one">Introduce a number</label><input id="one">
                     <label for="two">Introduce a second number</label><input id="two">
-                    <button onclick="doAdd()">Add</button>
+                    <button onclick="doAdd()">+</button>
+                    <button onclick="doAdd()">-</button>
+                    <button onclick="doAdd()">*</button>
+                    <button onclick="doAdd()">/</button>
+                    <button onclick="doAdd()">**</button>
+                    <button onclick="doAdd()">Clear</button>
 
                     <h2 id="output"></h2>
                 </main>
