Creating an individual css file for each internal webpage and correcting the links in their corresponding html files

--- a/certs/certs.html
+++ b/certs/certs.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Sofia F's Resume | Certifications</title>
-        <link rel="stylesheet" href="../index.css" type="text/css">
+        <link rel="stylesheet" href="certs.css" type="text/css">
     </head>
     <body>
         <div id="page-wrapper">
