--- a/experience/exp.html
+++ b/experience/exp.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Sofia F's Resume | Experience</title>
-        <link rel="stylesheet" href="../index.css" type="text/css">
+        <link rel="stylesheet" href="exp.css" type="text/css">
     </head>
     <body>
         <div id="page-wrapper">
