--- a/ref/refs.html
+++ b/ref/refs.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Sofia F's Resume | References</title>
-        <link rel="stylesheet" href="../index.css" type="text/css">
+        <link rel="stylesheet" href="refs.css" type="text/css">
     </head>
     <body>
         <div id="page-wrapper">
