reintroducing reference to index.css into each internal page

--- a/proj/proj.html
+++ b/proj/proj.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Sofia F's Resume | Projects</title>
+        <link rel="stylesheet" href="../index.css" type="text/css">
         <link rel="stylesheet" href="proj.css" type="text/css">
     </head>
     <body>
