--- a/club/leadership-exp.html
+++ b/club/leadership-exp.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Sofia F's Resume | Leadership</title>
         <link rel="stylesheet" href="../index.css" type="text/css">
+        <link rel="stylesheet" href="leadership-exp.css" type="text/css">
     </head>
     <body>
         <div id="page-wrapper">
