--- a/education/edu.html
+++ b/education/edu.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Sofia F's Resume | Education</title>
+        <link rel="stylesheet" href="../index.css" type="text/css">
         <link rel="stylesheet" href="edu.css" type="text/css">
     </head>
     <body>
