Creating the functions for the javasxript calculator

--- a/proj/proj.html
+++ b/proj/proj.html
@@ -31,11 +31,11 @@
                     <label for="one">Introduce a number</label><input id="one">
                     <label for="two">Introduce a second number</label><input id="two">
                     <button onclick="doAdd()">+</button>
-                    <button onclick="doAdd()">-</button>
-                    <button onclick="doAdd()">*</button>
-                    <button onclick="doAdd()">/</button>
-                    <button onclick="doAdd()">**</button>
-                    <button onclick="doAdd()">Clear</button>
+                    <button onclick="doSubtract()">-</button>
+                    <button onclick="doMultiply()">*</button>
+                    <button onclick="doDivide()">/</button>
+                    <button onclick="doPower()">**</button>
+                    <button onclick="doClear()">Clear</button>
 
                     <h2 id="output"></h2>
                 </main>
