Organizing index.css better and fixing an id error in index.html

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
                 </nav>
                 <main>
                     <img id="headshot" src="src/headshot-sf.jpeg" alt="Sofia Ford">
-                    <p id="intro"><br>My name is Sofia Ford, and I'm an undergraduate student at Boston University. <br>
-                    I'm majoring in Computer Science with the expected graduation date of May 2026. I'm looking to <br>
-                    expand my knowledge in CS through an entry-level position or internship.</p>
-                    <p id="intro">
-                    My skills include: C#, Python, Java, Matplotlib, Numpy, ArcGIS online, SQL, Oracle, OCaml, Golang <br>
-                    Git, ArcGIS, Canva, Wix and Microsoft Office Suite. If you would like to learn more about me, feel <br>
-                    free to explore my website.
-                    </p>
+                    <div id="intro">
+                        <p><br>My name is Sofia Ford, and I'm an undergraduate student at Boston University. <br>
+                        I'm majoring in Computer Science with the expected graduation date of May 2026. I'm looking to <br>
+                        expand my knowledge in CS through an entry-level position or internship.</p>
+                        <p>
+                        My skills include: C#, Python, Java, Matplotlib, Numpy, ArcGIS online, SQL, Oracle, OCaml, Golang <br>
+                        Git, ArcGIS, Canva, Wix and Microsoft Office Suite. If you would like to learn more about me, feel <br>
+                        free to explore my website.
+                        </p>
+                    </div>
                     <h2 class="contact">Contact Info</h2>
                     <p class="contact">sofiac1903@gmail.com | scfordw@bu.edu<p>
                 </main>
