--- a/club/leadership-exp.html
+++ b/club/leadership-exp.html
@@ -29,7 +29,7 @@
                     <div class="leadership">
                         <ul>
                             <li>
-                                <h4>The BU Buzz</h4>
+                                <strong>The BU Buzz</strong><br>
                                 <p><em>Web Director</em><br>
                                     Jan 2025-Present<br>
                                     Boston, MA</p>
@@ -40,7 +40,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <h4>Alpha Sigma Kappa – Women in Technical Studies</h4>
+                                <strong>Alpha Sigma Kappa – Women in Technical Studies</strong><br>
                                 <p><em>Active Member - Social & Professional STEM Sorority </em><br>
                                     <em>Public Relations Chair</em><br>
                                     Feb 2023-Dec 2024<br>
