--- a/education/edu.html
+++ b/education/edu.html
@@ -31,8 +31,9 @@
                         Expected Graduation: May 2026<br>
                         <em>Boston, MA</em><br>
                         <br>
-                        <strong>Honors:</strong>
+
                     </p>
+                    <h4><strong>Honors:</strong></h4>
                     <div class="schools">
                         <ul>
                             <li>Dean's List Spring 2025</li>
