--- a/proj/proj.html
+++ b/proj/proj.html
@@ -27,17 +27,18 @@
                     <!--Fill with info-->
                     <h3>Projects:</h3>
 
+                    <div id="calculator">
+                        <label for="one">Introduce a number</label><input id="one">
+                        <label for="two">Introduce a second number</label><input id="two">
+                        <button onclick="doAdd()">+</button>
+                        <button onclick="doSubtract()">-</button>
+                        <button onclick="doMultiply()">*</button>
+                        <button onclick="doDivide()">/</button>
+                        <button onclick="doPower()">**</button>
+                        <button onclick="doClear()">Clear</button>
 
-                    <label for="one">Introduce a number</label><input id="one">
-                    <label for="two">Introduce a second number</label><input id="two">
-                    <button onclick="doAdd()">+</button>
-                    <button onclick="doSubtract()">-</button>
-                    <button onclick="doMultiply()">*</button>
-                    <button onclick="doDivide()">/</button>
-                    <button onclick="doPower()">**</button>
-                    <button onclick="doClear()">Clear</button>
-
-                    <h2 id="output"></h2>
+                        <h2 id="output"></h2>
+                    </div>
                 </main>
             </div>
             <footer>
