--- a/experience/exp.html
+++ b/experience/exp.html
@@ -29,7 +29,7 @@
                     <div class="work">
                         <ul>
                             <li>
-                                <h4>Panama's Ministry of Economy and Finance</h4>
+                                <strong>Panama's Ministry of Economy and Finance</strong><br>
                                 <p><em>Intern in the Computation Department</em><br>
                                 May 2025-Aug 2025<br>
                                 Panama City, Panama</p>
@@ -39,7 +39,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <h4>Boston University Questrom Starbucks</h4>
+                                <strong>Boston University Questrom Starbucks</strong><br>
                                 <p><em>Student Front-Of-House Worker</em><br>
                                 Jun 2023-May 2025<br>
                                 Boston, MA</p>
@@ -49,7 +49,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <h4>Panama Canal Authority</h4>
+                                <strong>Panama Canal Authority</strong><br>
                                 <p><em>Intern-Student Assistant in GIS office</em><br>
                                 Jun 2024-Aug 2024<br>
                                 Panama City, Panama</p>
