--- a/ref/refs.html
+++ b/ref/refs.html
@@ -26,15 +26,15 @@
                 <main>
                     <h3 class="references">References:</h3>
                     <ul class="references">
-                        <li><h4>Patricia Norton | Boston University Dining Service</h4><br>
+                        <li><strong>Patricia Norton | Boston University Dining Service</strong><br>
                             <p><em>Food Service Manager, Questrom School of Business Retail</em><br>
                             <strong>Office:</strong>595 Commonwealth Avenue Boston, MA 02215<br>
                             <strong>Phone:</strong>+1(617)353-1524</p>
                         </li>
-                        <li><h4>Carlos Contreras | Panama Canal Authority</h4><br>
+                        <li><strong>Carlos Contreras | Panama Canal Authority</strong><br>
                             <p><em>Senior GIS and IT Solutions Leader, Strategic Project Manager</em><br>
                             <strong>Office:</strong>XC5V+QXP, Panama City, Panamá Province, Panama<br>
-                                <strong>Phone:</strong>+507-6672-2074</p>
+                            <strong>Phone:</strong>+507-6672-2074</p>
                         </li>
                     </ul>
                 </main>
