--- a/proj/proj.html
+++ b/proj/proj.html
@@ -25,7 +25,7 @@
                 </nav>
                 <main>
                     <!--Fill with info-->
-                    <h3>Projects:</h3>
+                    <h3 class="projects">Projects:</h3>
 
                     <div id="calculator">
                         <label for="one">Introduce a number</label><input id="one">
