Readjusting elements in certs.html and edu.html

--- a/certs/certs.html
+++ b/certs/certs.html
@@ -26,7 +26,7 @@
                 <main>
                     <h3 class="certifications">Certifications</h3>
                     <ul class="certifications">
-                        <li><strong>"Understanding Sql Using Oracle DataBase" Certification</strong>
+                        <li><strong>"Understanding Sql Using Oracle DataBase" Certification</strong><br>
                             <img id="sql-ocl-cert" src="../src/cert-sql-oracle.jpg" alt="Sql using Oracle Database Certification granted by the Panamanian Institue of Technology and Inovation to Sofia Ford">
                         </li>
                     </ul>
