--- a/education/edu.html
+++ b/education/edu.html
@@ -33,7 +33,7 @@
                         <br>
 
                     </p>
-                    <h4><strong>Honors:</strong></h4>
+                    <h4 class="schools"><strong>Honors:</strong></h4>
                     <div class="schools">
                         <ul>
                             <li>Dean's List Spring 2025</li>
