Attempting to resolve spacing issues

--- a/experience/exp.html
+++ b/experience/exp.html
@@ -24,7 +24,7 @@
                     </ul>
                 </nav>
                 <main>
-                    <h3 id="worktitle">Work Experience</h3>
+                    <h3 class="work">Work Experience</h3>
 
                     <div class="work">
                         <ul>
